--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,13 +1,29 @@
 server:
   port: 88
+
 spring:
   mvc:
     view:
       prefix: /WEB-INF/jsp/
       suffix: .jsp
-    static-path-pattern: /static/** 
+    static-path-pattern: /static/**
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3307/sns_230320?characterEncoding=UTF-8  
+    url: jdbc:mysql://localhost:3307/sns_230320?characterEncoding=UTF-8
     username: root
-    password: root                
+    password: root
+  jpa:
+    show-sql: true
+    hibernate:
+      ddl-auto: none
+      naming:
+        implicit-strategy: org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
+        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+    properties:
+      hibernate:
+        format-sql: true
+    
+    
+    
+    
+    
